[project]
name = "arona-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "httpx>=0.28.0",
    "imagehash>=4.3.2",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pdqhash>=0.2.8",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
]
